@@ -1,7 +1,6 @@
 [GatherDir]
 exclude_filename = Makefile.PL
 exclude_filename = Build.PL
-exclude_filename = cpanfile
 exclude_filename = xt/release/changes.t
 exclude_filename = xt/release/fixme.t
 exclude_match = ^_build/
@@ -67,4 +66,3 @@ type = markdown
 travis_status = 0
 
 [Author::Plicease::SpecialPrereqs]
-[CPANFile]
